Updated spacing of wide image to avoid large margins.

--- a/style.css
+++ b/style.css
@@ -465,14 +465,14 @@ html, body {
     margin: 15px;
   }
   .section1-img {
-    float: none;
+    float: left;
     width: 0;
     margin: 0;
   }
   .section1-img-wide {
     float: none;
     width: calc(100% - 30px);
-    margin: 0 15px;
+    margin: 0 15px 15px 15px;
   }
 }
 
